# curv-tester

./: Cargo.toml  fluence.yaml
.fluence/aqua/: services.aqua
.fluence/tmp/: Config.toml
src/aqua/: main.aqua
src/services/curv_test/: service.yaml
src/services/curv_test/modules/curv_test/: Cargo.toml  module.yaml
src/services/curv_test/modules/curv_test/src/: main.rs
